nassh: prefs: fix unselected panels bleeding through
If the selected settings page does not fill up the entire height,
then unselected settings pages below may be interacted with.  You
don't notice it at first as the pages are all marked with opacity
of 0%, but Chrome still allows you to interact with elements you
can't actually see.  Forcing the selected panel to fill the entire
page avoids that by covering up the lower content.

Reviewed-on: https://chromium-review.googlesource.com/c/apps/libapps/+/2153388
Tested-by: kokoro <noreply+kokoro@google.com>

--- a/nassh/css/nassh_preferences_editor.css
+++ b/nassh/css/nassh_preferences_editor.css
@@ -58,6 +58,14 @@ body {
 }
 
 /*
+ * Make sure the right pane takes up the whole page when selected.
+ * Otherwise, unselected panes underneath will bleed through.
+ */
+.chrome-bootstrap .frame .mainview > .selected {
+  height: 100%;
+}
+
+/*
  * The container of the terminal preview iframe.
  */
 #terminal {
